simplify init of static variable